[package]
name = "monkey-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yago Iglesias <yagoiglesias7@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Monkey programming language implementation in Rust (interpreter and compiler)"
readme = "README.md"
homepage = "https://github.com/Yag000/monkey-rs"
repository = "https://github.com/Yag000/monkey-rs"

[workspace]
members = ["crates/*"]

[lib]
name = "monkey"
path = "lib/lib.rs"


[dependencies]
# local crates
lexer = { path = "./crates/lexer" }
parser = { path = "./crates/parser" }
interpreter = { path = "./crates/interpreter" }
compiler = { path = "./crates/compiler" }
vm = { path = "./crates/vm" }
repl = { path = "./crates/repl" }
object = { path = "./crates/object" }

# external crates
clap = "4.3.11"
clap_derive = "4.3.2"
criterion = "0.5.1"
chrono = "0.4.26"

[[bench]]
name = "fibonacci_bench"
harness = false


[[bench]]
name = "array_bench"
harness = false

