[package]
name = "chimpanzee"
version = "0.2.1"
edition = "2021"
authors = ["Yago Iglesias <yagoiglesias7@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Monkey programming language implementation (interpreter, compiler and formatter), with added features"
readme = "README.md"
homepage = "https://github.com/Yag000/monkey-rs"
repository = "https://github.com/Yag000/monkey-rs"
documentation = "https://github.com/Yag000/monkey-rs"
keywords = ["monkey", "interpreter", "compiler", "programming-language"]


[lib]
name = "chimpanzee"
path = "src/lib.rs"


[dependencies]
clap = "4.3.11"
clap_derive = "4.3.2"
criterion = "0.5.1"
byteorder = "1.4.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
strum = "0.25.0"
strum_macros = "0.25.2"


[[bench]]
name = "formatter_bench"
harness = false

[[bench]]
name = "fibonacci_bench"
harness = false


[[bench]]
name = "array_bench"
harness = false



