[package]
name = "chimpanzee"
version = "0.2.4"
edition = "2021"
authors = ["Yago Iglesias <yagoiglesias7@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Monkey programming language implementation (interpreter, compiler and formatter), with added features"
readme = "README.md"
homepage = "https://github.com/Yag000/monkey-rs"
repository = "https://github.com/Yag000/monkey-rs"
documentation = "https://github.com/Yag000/monkey-rs"
keywords = ["monkey", "interpreter", "compiler", "programming-language"]


[lib]
name = "chimpanzee"
path = "src/lib.rs"


[dependencies]
clap = "4.5.2"
clap_derive = "4.4.7"
byteorder = "1.5.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
strum = "0.26.2"
strum_macros = "0.26.1"
rustyline = "14.0.0"
enum_stringify = "0.4.0"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "formatter_bench"
harness = false

[[bench]]
name = "fibonacci_bench"
harness = false


[[bench]]
name = "array_bench"
harness = false



