[package]
name = "object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

parser = { path = "../parser" }

# External

num-derive = "0.4.0"
num-traits = "0.2.15"
strum = "0.25"
strum_macros = "0.25"
