[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
interpreter = { path = "../interpreter" }
compiler = { path = "../compiler" }
vm = { path = "../vm" }

# External crates
clap = "4.3.11"
clap_derive = "4.3.2"


